--- a/style.css
+++ b/style.css
@@ -32,3 +32,12 @@ footer{
     border-top:1px solid #8100F4;
     padding-top:10px;
 }
+.card-deck{
+    margin-top: 50px;
+    padding-left: 150px;
+    padding-right: 150px;
+    padding-top:10px;
+}
+.card-footer{
+    text-align: right;
+}
