--- a/style.css
+++ b/style.css
@@ -3,14 +3,13 @@
     margin-right: 5px;
 }
 .navbar-brand{
-    font-size: 25px;
+    font-size: 20px;
+    text-transform: uppercase;
 }
-#navbarSupportedContent{
-    margin-left: 40px;
-    font-size: 25px;
-}
+
 li a.nav-link{
-    margin-left:50px; 
+    margin-left:50px;
+    text-transform: uppercase;
 }
 
 .btn{
@@ -23,6 +22,14 @@ li a.nav-link{
     border-color: white;
 }
 
+.carousel{
+    margin-top: 60px;
+}
+.titre-page{
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+
 footer nav a{
     color: black;
 }
@@ -31,4 +38,8 @@ footer{
     margin-top: 50px;
     border-top:1px solid #8100F4;
     padding-top:10px;
+}
+
+.fab{
+    margin-right: 5px;
 }
