--- a/style.css
+++ b/style.css
@@ -32,12 +32,12 @@ footer{
     border-top:1px solid #8100F4;
     padding-top:10px;
 }
-.card-deck{
+.card-deck.us{
     margin-top: 50px;
     padding-left: 50px;
     padding-right: 50px;
     padding-top:10px;
 }
-.card-footer{
+.card-footer.us{
     text-align: right;
 }
