--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ footer{
     border-top:1px solid #8100F4;
     padding-top:10px;
 }
+/* paramétrage cards sur aboutus */
 .card-deck.us{
     margin-top: 50px;
     padding-left: 50px;
@@ -41,3 +42,4 @@ footer{
 .card-footer.us{
     text-align: right;
 }
+/*fin de paramétrage cards sur aboutus */
