--- a/style.css
+++ b/style.css
@@ -43,6 +43,10 @@ footer{
     text-align: right;
 }
 .team{
-    margin-top: 50px;
+    padding-top:10px;
+    margin-top: 80px;
+ }
+.card-text{
+    font-size: 15px;
 }
 /* Fin style page aboutus */
