--- a/style.css
+++ b/style.css
@@ -71,3 +71,15 @@ form{
     width: 100%;
     height: auto;
 }
+
+.navbar a{
+    font-family: 'Amaranth', sans-serif;
+}
+
+h1{
+    font-family: 'Amaranth', sans-serif;
+}
+
+.bg-card{
+    background-color: #8100F4;
+}
