--- a/contact.css
+++ b/contact.css
@@ -1,3 +1,5 @@
+/* NAVBAR */
+
 .logo{
     width: 40px;
     margin-right: 5px;
@@ -12,9 +14,7 @@ li a.nav-link{
     text-transform: uppercase;
 }
 
-h1{
-    font-family: 'Amaranth', sans-serif;
-}
+
 
 .btn{
     color: #8100F4;
@@ -27,19 +27,21 @@ h1{
     border-color: white;
 }
 
+/* BREADCRUMB */
+
+.fil {
+    color:#8100F4;
+}
+
+/* CONTENU PAGE CONTACTEZ-NOUS */
+
+h1{
+    font-family: 'Amaranth', sans-serif;
+}
+
 .titre-page{
     margin-top: 15px;
     margin-bottom: 15px;
-}
-
-footer nav a{
-    color: black;
-}
-
-footer{
-    margin-top: 50px;
-    border-top:1px solid #8100F4;
-    padding-top:10px;
 }
 
 form{
@@ -48,29 +50,6 @@ form{
 
 .contactezns{
     margin-top: 30px;
-}
-
-.fil {
-    color:#8100F4;
-}
-
-.fab{
-    margin-right: 5px;
-}
-
-.card-deck{
-    margin-top: 50px;
-    padding-left: 150px;
-    padding-right: 150px;
-    padding-top:10px;
-}
-.card-footer{
-    text-align: right;
-}
-
-.card>img{
-    width: 100%;
-    height: auto;
 }
 
 input[type="email"]::-webkit-input-placeholder
@@ -87,4 +66,23 @@ input[type="text"]::-webkit-input-placeholder
 {
     color: #D3D3D3;
 }
+
+/* FOOTER*/
+
+footer nav a{
+    color: black;
+}
+
+footer{
+    margin-top: 50px;
+    border-top:1px solid #8100F4;
+    padding-top:10px;
+}
+
+.fab{
+    margin-right: 5px;
+}
+
+
+
 
