--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+/* NAVBAR */ 
+
 .logo{
     width: 40px;
     margin-right: 5px;
@@ -23,6 +25,11 @@ li a.nav-link{
     border-color: white;
 }
 
+/* BREADCRUMB*/
+.fil {
+    color:#8100F4;
+}
+
 .carousel{
     margin-top: 60px;
 }
@@ -31,6 +38,8 @@ li a.nav-link{
     margin-bottom: 15px;
 }
 
+
+/* FOOTER*/
 footer nav a{
     color: black;
 }
@@ -41,21 +50,20 @@ footer{
     padding-top:10px;
 }
 
+.fab{
+    margin-right: 5px;
+}
+
+/* A VOIR POUR SUPPRESSION >>> form*/
 form{
     margin-top:40px;
 }
 
-.contactezns{
-    margin-top: 30px;
-}
 
-.fil {
-    color:#8100F4;
-}
 
-.fab{
-    margin-right: 5px;
-}
+
+
+/* A supprimer ?? >>> validation team
 
 .card-deck{
     margin-top: 50px;
@@ -66,20 +74,23 @@ form{
 .card-footer{
     text-align: right;
 }
+*/
 
+/* CARDS COLUMN*/
 .card>img{
     width: 100%;
     height: auto;
 }
 
-.navbar a{
-    font-family: 'Amaranth', sans-serif;
-}
-
-h1{
+.navbar a, h1{
     font-family: 'Amaranth', sans-serif;
 }
 
 .bg-card{
     background-color: #8100F4;
 }
+
+.card-text{
+    text-align: justify;
+}
+
