--- a/article.css
+++ b/article.css
@@ -1,10 +1,16 @@
+/* CSS NAVBAR*/
 .logo{
     width: 40px;
     margin-right: 5px;
 }
+
 .navbar-brand{
     font-size: 20px;
     text-transform: uppercase;
+}
+
+.navbar a, h1{
+    font-family: 'Amaranth', sans-serif;
 }
 
 li a.nav-link{
@@ -22,22 +28,41 @@ li a.nav-link{
     background-color: #8100F4;
     border-color: white;
 }
+/* END CSS NAVBAR*/
 
-.carousel{
-    margin-top: 60px;
+
+/* BREADCRUMB CSS*/
+.fil {
+    color:#8100F4;
 }
+/* END CSS BREADCRUMB*/
+
+
+/* CSS CONTENT*/
 .title-page{
     margin-top: 55px;
-    margin-bottom: 15px;
-}
-
-.img-backg{
-    width: 80%;
+    margin-bottom: 25px;
 }
 
 .text-justify >p{
     margin-top: 20px;
 }
+
+h3{
+    font-family: 'Amaranth', sans-serif;
+}
+
+.border-source{
+    background-color: #E8EBEF;
+    padding:5px 0 5px 5px;
+}
+
+.border-source a{
+    color: #8100F4;
+}
+/* END CSS CONTENT*/
+
+/* CSS FOOTER*/
 footer nav a{
     color: black;
 }
@@ -48,12 +73,9 @@ footer{
     padding-top:10px;
 }
 
-
-.fil {
-    color:#8100F4;
-}
-
 .fab{
     margin-right: 5px;
 }
+
+/* END CSS FOOTER*/
 
