--- a/style.css
+++ b/style.css
@@ -38,6 +38,62 @@ li a.nav-link{
     margin-bottom: 15px;
 }
 
+/* ARTICLE */
+
+.title-page{
+    margin-top: 55px;
+    margin-bottom: 25px;
+}
+
+.text-justify >p{
+    margin-top: 20px;
+}
+
+h3{
+    font-family: 'Amaranth', sans-serif;
+}
+
+.border-source{
+    background-color: #E8EBEF;
+    padding:5px 0 5px 5px;
+}
+
+.border-source a{
+    color: #8100F4;
+}
+
+/* CONTACT */
+h1{
+    font-family: 'Amaranth', sans-serif;
+}
+
+.titre-page{
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+
+form{
+    margin-top:40px;
+}
+
+.contactezns{
+    margin-top: 30px;
+}
+
+input[type="email"]::-webkit-input-placeholder
+{
+    color: #D3D3D3;
+}
+
+input[type="name"]::-webkit-input-placeholder
+{
+    color: #D3D3D3;
+}
+
+input[type="text"]::-webkit-input-placeholder
+{
+    color: #D3D3D3;
+}
 
 /* FOOTER*/
 footer nav a{
